game functio ing correct need to clean up some stuff and figure out hangman dashes

--- a/style.css
+++ b/style.css
@@ -41,7 +41,13 @@ html {
   font-size: larger;
 }
 
-#lettersGuessed {
+#lettersGuessed,
+.label {
   padding-left: 5rem;
   color: white;
+}
+
+.correctGuess {
+  color: blueviolet;
+  font-size: larger;
 }
